syntax = "proto3";

package User;

service UserManage {
  rpc getUser (UserRequest) returns (UserResponse);
}

message User {
  int32 id = 1;
  string name = 2;
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  User user = 1;
}